--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,9 +1,8 @@
 unbindall
 
+// ---------------------------
 // Aliases
-
-alias "+duckjump" "+jump; +duck"
-alias "-duckjump" "-jump, -duck"
+// ---------------------------
 
 alias "+jumpthrow" "+jump;-attack"
 alias "-jumpthrow" "-jump;"
@@ -11,17 +10,13 @@ alias "-jumpthrow" "-jump;"
 alias "+quickswitch" "slot3"
 alias "-quickswitch" "lastinv"
 
-alias "+shiftwalk" "incrementvar volume 0 1 0.025; +speed"
-alias "-shiftwalk" "incrementvar volume 0 1 -0.025; -speed"
-
-clutchoff
-
-alias "bhop" "exec bhop.cfg; bind k nobhop"
-alias "nobhop" "cl_showpos 0; sv_cheats 0; bind k bhop"
+alias "+shiftwalk" "incrementvar volume 0 1 0.02; +speed"
+alias "-shiftwalk" "incrementvar volume 0 1 -0.02; -speed"
 
 
-
+// ---------------------------
 // Binds
+// ---------------------------
 
 bind "1" "slot1"
 bind "2" "slot2"
@@ -32,33 +27,31 @@ bind "6" "slot6"
 bind "7" "slot7"
 bind "8" "slot8"
 bind "9" "slot9"
-bind "a" "+moveleft; r_cleardecals"
+bind "a" "+moveleft"
 bind "b" "buymenu"
 bind "c" "use weapon_flashbang"
-bind "d" "+moveright; r_cleardecals"
+bind "d" "+moveright"
 bind "e" "+use"
 bind "f" "+lookatweapon"
 bind "g" "drop"
-bind "h" "clutchmode"
-bind "i" "voice_enable"
-bind "k" "bhop"
+bind "i" "toggle voice_enable 0 1"
 bind "l" "slot12"
 bind "m" "teammenu"
-bind "n" "exec surf; setpos -13872.22 -32.50 12864.09; setang 0.00 0.00 0.00"
+bind "n" "r_cleardecals"
 bind "o" "toggle cl_righthand 0 1"
 bind "q" "+quickswitch"
 bind "r" "+reload"
-bind "s" "+back; r_cleardecals"
+bind "s" "+back"
 bind "t" "messagemode"
 bind "u" "messagemode2"
 bind "v" "use weapon_hegrenade"
 bind "w" "+forward; r_cleardecals"
 bind "x" "use weapon_smokegrenade"
-bind "y" "exec knife.cfg"
+bind "y" "+spray_menu"
 bind "z" "use weapon_molotov; use weapon_incgrenade"
 bind "[" "radio1"
 bind "]" "sv_rethrow_last_grenade"
-bind "'" "sv_cheats 1; noclip; say .noclip"
+bind "'" "sv_cheats 1; noclip"
 bind "`" "toggleconsole"
 bind "," "buy vest"
 bind "." "buy vesthelm; buy vest"
@@ -71,10 +64,9 @@ bind "SPACE" "+jump"
 bind "TAB" "+showscores"
 bind "ESCAPE" "cancelselect"
 bind "SHIFT" "+shiftwalk"
-bind "CONTROL" "+duckjump"
-bind "COMMAND" "+duck"
+bind "CONTROL" "+duck"
 bind "ALT" "+jumpthrow"
-bind "UPARROW" "give weapon_smokegrenade; buy smokegrenade;"
+bind "UPARROW" "buy smokegrenade;"
 bind "LEFTARROW" "buy hegrenade;"
 bind "DOWNARROW" "buy flashbang;"
 bind "RIGHTARROW" "buy molotov; buy incgrenade;"
@@ -86,15 +78,17 @@ bind "F5" "buy famas; buy galilar;
 bind "F6" "buy mac10; buy mp9;"
 bind "F7" "buy ump45;"
 bind "F8" "buy p250;"
-bind "F9" "buy tec9; buy fiveseven; buy cz75a"
-bind "F10" "buy deagle; buy revolver;"
+bind "F9" "buy tec9; buy fn57"
+bind "F10" "buy deagle"
 bind "MOUSE1" "+attack"
 bind "MOUSE2" "+attack2"
 bind "MOUSE5" "+voicerecord"
 bind "MWHEELUP" "+jump"
 bind "MWHEELDOWN" "+jump"
 
-// Other stuff
+// ---------------------------
+// Actual settings
+// ---------------------------
 
 @panorama_debug_overlay_opacity "0.8"
 adsp_debug "0"
@@ -488,7 +482,7 @@ ui_vanitysetting_model2 "models/player/custom_player/legacy/tm_jumpsuit_variantb
 ui_vanitysetting_team "t"
 vgui_message_dialog_modal "1"
 viewmodel_fov "68"
-viewmodel_offset_x "2"
+viewmodel_offset_x "1.5"
 viewmodel_offset_y "-0.5"
 viewmodel_offset_z "-1"
 viewmodel_presetpos "0"
@@ -502,7 +496,7 @@ voice_positional "0"
 voice_scale "1.0"
 voice_system_enable "1"
 voice_threshold "4000"
-volume "0.045"
+volume "0.05"
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
@@ -515,7 +509,6 @@ xbox_throttlespoof "200"
 zoom_sensitivity_ratio_joystick "1.0"
 zoom_sensitivity_ratio_mouse "0.5"
 
-// Echo and config
 
 echo "Autoexec successfully loaded!"
 
