--- a/lan.cfg
+++ b/lan.cfg
@@ -1,6 +1,8 @@
-sv_lan 1
 bot_kick
-sv_autobunnyhopping 1
-mp_freezetime 7
+
+sv_lan 1
+mp_freezetime 10
+mp_limitteams 0
+mp_autoteambalance 0
 mp_restartgame 1
 mp_pause_match
